force-app/main/default/objects/Returned_Books__c/Returned_Books__c.object-meta.xml
<CustomObject>
    <label>Returned_Books</label>
    <nameField>
        <label>Returned_Books Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Returned_Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>