force-app/main/default/objects/Returned_Books__c/fields/Author_of_Book__c.field-meta.xml
<CustomField>
    <fullName>Author_of_Book__c</fullName>
    <label>Author of Book</label>
    <length>50</length>
    <type>Text</type>
</CustomField>