force-app/main/default/objects/Returned_Books__c/fields/Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Book_ID__c</fullName>
    <label>Book ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>